[gd_scene load_steps=22 format=3 uid="uid://mje13m0bdoj2"]

[ext_resource type="Script" uid="uid://da0211wy8288o" path="res://scripts/character.gd" id="1_w8k2v"]
[ext_resource type="Texture2D" uid="uid://6xm3lmnjv3wm" path="res://assets/battle/character_sprites/turin_batalha.png" id="2_i30wg"]
[ext_resource type="Texture2D" uid="uid://1r1igt6ogl50" path="res://assets/battle/character_sprites/turin_heal.png" id="3_mkcmu"]
[ext_resource type="AudioStream" uid="uid://bxv8cyux61nvh" path="res://assets/sounds/hit.wav" id="4_8fhno"]
[ext_resource type="AudioStream" uid="uid://v5g5pt1bp1s6" path="res://assets/sounds/enemy_death.wav" id="5_51ltb"]
[ext_resource type="AudioStream" uid="uid://b5l6brydh16eh" path="res://assets/sounds/damage_taken_01.wav" id="6_s5wn0"]
[ext_resource type="Script" uid="uid://djedbntpi67ro" path="res://scripts/DamageText.gd" id="7_5hj8d"]
[ext_resource type="Texture2D" uid="uid://llncv7o7fnvc" path="res://assets/characters/legacy/Turin.png" id="8_jrt78"]
[ext_resource type="Script" uid="uid://5oby3c85eoy4" path="res://scenes/inventory/battle_options.gd" id="9_8wyo8"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="9_qxph4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dve58"]
atlas = ExtResource("2_i30wg")
region = Rect2(0, 0, 500, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_am1a1"]
atlas = ExtResource("3_mkcmu")
region = Rect2(0, 0, 500, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_3de8b"]
atlas = ExtResource("3_mkcmu")
region = Rect2(500, 0, 500, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h5gr"]
atlas = ExtResource("3_mkcmu")
region = Rect2(1000, 0, 500, 700)

[sub_resource type="SpriteFrames" id="SpriteFrames_htfvh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dve58")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_am1a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3de8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h5gr")
}],
"loop": true,
"name": &"heal",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kqvds"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.823529, 0.298039, 1, 1), Color(0.823529, 0.298039, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_8fhno")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_51ltb")
}],
"times": PackedFloat32Array(0.0562, 0.1)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_6ykin"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7lblk"]
resource_name = "get_hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(5.8956e-05, 2.15792e-05, 0.00306478, 1.2394e-05, 4.78872e-05),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_8fhno")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_s5wn0")
}],
"times": PackedFloat32Array(0, 0.0467)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_ji6jx"]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"heal", &"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uup1h"]
_data = {
&"death": SubResource("Animation_kqvds"),
&"default": SubResource("Animation_6ykin"),
&"get_hit": SubResource("Animation_7lblk"),
&"heal": SubResource("Animation_ji6jx")
}

[sub_resource type="LabelSettings" id="LabelSettings_ly8eg"]
font_size = 13
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Character" type="Node2D"]
script = ExtResource("1_w8k2v")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0.823529, 0.298039, 1, 1)
scale = Vector2(0.04, 0.04)
sprite_frames = SubResource("SpriteFrames_htfvh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uup1h")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="DamageText" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -9.0
offset_right = 23.0
offset_bottom = 9.0
text = "9545"
label_settings = SubResource("LabelSettings_ly8eg")
horizontal_alignment = 1
script = ExtResource("7_5hj8d")

[node name="CharPic" type="TextureRect" parent="."]
visible = false
texture = ExtResource("8_jrt78")
expand_mode = 3
stretch_mode = 4

[node name="BattleOptions" type="VBoxContainer" parent="."]
offset_left = -41.0
offset_top = -11.0
offset_right = 694.0
offset_bottom = 621.0
scale = Vector2(0.04, 0.04)
theme_override_constants/separation = 49
script = ExtResource("9_8wyo8")

[node name="Button" type="Button" parent="BattleOptions"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("9_qxph4")
theme_override_font_sizes/font_size = 100
text = " Atacar‚öîÔ∏è "

[node name="Button2" type="Button" parent="BattleOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("9_qxph4")
theme_override_font_sizes/font_size = 100
text = " Itemüéí "

[node name="Button3" type="Button" parent="BattleOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("9_qxph4")
theme_override_font_sizes/font_size = 100
text = "Fun√ß√£oüîÆ"

[node name="Button4" type="Button" parent="BattleOptions"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("9_qxph4")
theme_override_font_sizes/font_size = 100
text = " Fugirüí® "
